# maestro-klee

./: .gitignore  CMakeLists.txt  README.md  clean.sh  debug.sh
include/klee/tools/: bdd.hpp
tools/: CMakeLists.txt
tools/analyse-libvig-call-paths/: CMakeLists.txt  analyse-libvig-call-paths.cpp
tools/bdd-emulator/: bdd-emulator.h  common.h  main.cpp
tools/bdd-emulator/emulator/: emulator.cpp  emulator.h  internals.cpp  internals.h  reporter.cpp  reporter.h
tools/bdd-emulator/emulator/data_structures/: byte.h  data_structures.h  dchain.h  map.h  vector.h
tools/bdd-emulator/emulator/internals/: internals.h
tools/bdd-emulator/emulator/operations/: current_time.h  dchain_allocate.h  dchain_allocate_new_index.h  dchain_free_index.h  dchain_is_index_allocated.h  dchain_rejuvenate_index.h  expire_items_single_map.h  expire_items_single_map_iteratively.h  map_allocate.h  map_get.h  map_put.h  nf_set_rte_ipv4_tcpudp_checksum.h  operations.h  packet_borrow_next_chunk.h  packet_return_chunk.h  vector_allocate.h  vector_borrow.h  vector_return.h
tools/bdd-emulator/visualizers/: hit-rate.h
tools/bdd-reorderer/: CMakeLists.txt  bdd-reorderer.cpp  bdd-reorderer.h  main.cpp
tools/bdd-to-c/: CMakeLists.txt  ast.cpp  ast.h  bdd-to-c.cpp  klee_transpiler.cpp  nodes.h
tools/call-path-hit-rate-graphviz-generator/: CMakeLists.txt  call-path-hit-rate-graphviz-generator.h
tools/call-paths-to-bdd/: CMakeLists.txt  call-paths-to-bdd.h  main.cpp  solver-toolbox.cpp  solver-toolbox.h
tools/call-paths-to-bdd/bdd/: bdd-io.cpp  bdd.cpp  bdd.h  call-paths-groups.cpp  symbol-factory.cpp  symbol-factory.h  utils.h
tools/call-paths-to-bdd/bdd/nodes/: branch.cpp  branch.h  call.cpp  call.h  node.cpp  node.h  return_init.cpp  return_init.h  return_process.cpp  return_process.h  return_raw.cpp  return_raw.h  symbol.h
tools/call-paths-to-bdd/bdd/visitors/: graphviz-generator.h  printer-debug.h
tools/clone/: CMakeLists.txt  clone.cpp  pch.hpp
tools/clone/bdd/: bdd-builder.cpp  bdd-builder.hpp  bdd.cpp  bdd.hpp  builder.cpp  builder.hpp  visitor.cpp  visitor.hpp
tools/clone/models/: device.cpp  device.hpp  link.cpp  link.hpp  network.cpp  network.hpp  nf.cpp  nf.hpp  node.cpp  node.hpp  port.cpp  port.hpp
tools/clone/network/: network.cpp  network.hpp  node.hpp
tools/clone/parser/: parser.cpp  parser.hpp
tools/clone/util/: logger.tpp
tools/klee-util/: concretize_symbols.h  exprs.cpp  exprs.h  klee-util.h  main.cpp  printer.cpp  printer.h  rename_symbols.h  replace_symbols.h  retrieve_symbols.cpp  retrieve_symbols.h  simplifier.cpp  simplifier.h  solver_toolbox.cpp  solver_toolbox.h  swap_endianness.h
tools/load-call-paths/: CMakeLists.txt  load-call-paths.cpp  load-call-paths.h
tools/nf-comb/: CMakeLists.txt  TODO.txt  comb_config.cpp  comb_config.h  error_utils.h  main.cpp  nf_comb.h  node_utils.cpp  node_utils.h  path_finder.cpp  path_finder.h
tools/nf-comb/bdd/: bdd-io.cpp  bdd.h
tools/nf-comb/bdd/nodes/: branch.h  call.cpp  call.h  node.h  return_init.h  return_process.h  symbol.h
tools/nf-comb/bdd/visitors/: graphviz-generator.h
tools/nf-combination/: CMakeLists.txt  nf-combination.cpp
tools/nf-combination/bdd/: bdd.h  path-explorer.cpp  path-explorer.h  symbol-factory.cpp
tools/nf-combination/bdd/nodes/: branch.h  call.cpp  call.h  node.h  return_init.h  return_process.h
tools/nf-combination/bdd/visitors/: graphviz-generator-comb.h  graphviz-generator.h
tools/nf-struct-detect/: CMakeLists.txt  main.cpp
tools/packet-modification-detector/: CMakeLists.txt  packet-modification-detector.cpp
tools/synapse/: CMakeLists.txt  code_generator.cpp  code_generator.h  log.h  search.h  search_space.h  symbex.cpp  symbex.h  synapse.cpp
tools/synapse/execution_plan/: execution_plan.cpp  execution_plan.h  execution_plan_node.cpp  execution_plan_node.h  memory_bank.h  target.cpp  target.h
tools/synapse/execution_plan/modules/: module.cpp  module.h  modules.h
tools/synapse/execution_plan/modules/bmv2/: bmv2.h  drop.h  else.h  ethernet_consume.h  ethernet_modify.h  forward.h  if.h  ignore.h  ip_options_consume.h  ip_options_modify.h  ipv4_consume.h  ipv4_modify.h  then.h  (+7 more)
tools/synapse/execution_plan/visitors/: graphviz.h  visitor.cpp  visitor.h
tools/synapse/heuristics/: biggest.h  dfs.h  exact_match.h  heuristics.h  least_reordered.h  maximize_switch_nodes.h  most_compact.h  score.cpp  score.h
tools/synapse/modules/: module.cpp  module.h  modules.h
tools/synapse/modules/bmv2/: bmv2.h  drop.h  else.h  ethernet_consume.h  ethernet_modify.h  forward.h  if.h  ignore.h  ip_options_consume.h  ip_options_modify.h  ipv4_consume.h  ipv4_modify.h  send_to_controller.h  setup_expiration_notifications.h  table_lookup.h  tcpudp_consume.h  tcpudp_modify.h  then.h  vector_return.h
tools/synapse/modules/tofino/: drop.h  else.h  ethernet_consume.h  ethernet_modify.h  forward.h  if.h  ignore.h  send_to_controller.h  table_lookup.h  then.h  tofino.h
tools/synapse/modules/x86_bmv2/: broadcast.h  current_time.h  dchain_allocate_new_index.h  dchain_is_index_allocated.h  dchain_rejuvenate_index.h  drop.h  else.h  expire_items_single_map.h  forward.h  if.h  map_get.h  map_put.h  nf_set_rte_ipv4_udptcp_checksum.h  packet_borrow_next_chunk.h  packet_get_metadata.h  packet_get_unread_length.h  packet_return_chunk.h  rte_ether_addr_hash.h  then.h  vector_borrow.h  vector_return.h  x86_bmv2.h
tools/synapse/modules/x86_tofino/: x86_tofino.h
tools/synergio/: CMakeLists.txt  constants.hpp  pch.hpp  synergio.cpp
tools/synergio/bdd/: loader.cpp  loader.hpp  visitor.cpp  visitor.hpp
tools/synergio/models/: device.cpp  device.hpp  link.cpp  link.hpp  network.cpp  network.hpp  nf.cpp  nf.hpp
tools/synergio/parser/: parser.cpp  parser.hpp
tools/synergio/util/: logger.hpp  logger.tpp
tools/util/: CMakeLists.txt  exprs.cpp  exprs.h  main.cpp  printer.cpp  rename_symbols.h  replace_symbols.h  retrieve_symbols.cpp  retrieve_symbols.h  solver_toolbox.cpp  solver_toolbox.h  swap_endianness.h  util.h
(+220 files in other folders)
